fix: update footer text color for better visibility

--- a/src/styles.css
+++ b/src/styles.css
@@ -52,7 +52,7 @@ h6 {
     font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
-    color: #880181;
+    color: #3f013c;
 }
 }
 
